--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.5">
-    <title>Jack Gee</title>
+    <title> {{ blog.title }} </title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
 
@@ -36,15 +36,15 @@
   <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{% url 'home' %}">Jack Gee</a>
+  <a class="navbar-brand" href={%url 'home'%}>Jack Gee</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto">
-      <a class="nav-item nav-link" href="http://instagram.com/jackgee15">Instagram</a>
+      <a class="nav-item nav-link" href="#">Instagram</a>
       <a class="nav-item nav-link" href="#">Resume</a>
-      <a class="nav-item nav-link" href={% url 'allblog' %}>Blog</a>
+      <a class="nav-item nav-link active" href="{% url 'allblog' %}">Blog</a>
     </div>
   </div>
 </nav>
@@ -52,33 +52,27 @@
 </header>
 
 <main role="main">
-
-  <section class="jumbotron text-center">
     <div class="container">
-      <h1 class="jumbotron-heading">Welcome</h1>
-      <p class="lead text-muted">This is my first website using the frame work django!! </p>
-      <p>
-        <a href="mailto:jack.gee@me.com" class="btn btn-primary my-2">Email Me</a>
 
-      </p>
+
+
+         <h3 href="{% url 'detail' blog.id %}"><h3> {{blog.title}}</h3>
+        <br />
+
+        <img Class="img-fluid" src="{{ blog.image.url }}" height=500 width=500 />
+
+        <br />
+
+        {{blog.Date}}
+
+        <br />
+
+        <p>{{ blog.Body }}</p>
+
+
+
     </div>
-  </section>
-
-  <div class="album py-5 bg-light">
-    <div class="container">
-
-      <div class="row">
-
-          {% for job in jobs.all %}
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="card-img-top" src="{{ job.image.url }}" />
-            <div class="card-body">
-              <p class="card-text">{{job.summary}}</p>
-            </div>
-          </div>
-        </div>
-            {% endfor %}
+</main>
 
 </main>
 
